--- a/_posts/2019-12-31-the-us-narrative-today.html
+++ b/_posts/2019-12-31-the-us-narrative-today.html
@@ -1574,107 +1574,107 @@ stories:
   domain: http://www.vpa.net/
   link: https://www.vpa.net/virginia-press-foundation-focuses-on-future-of-journalism/
 images:
-- name: downtown-trucksilo-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-satan-red.jpg
-- name: catacombs-catacombs-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-crunch-paper.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-attack-planes.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-attack-planes.jpg
-- name: oldcabin-store-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-ww2-color.jpg
-- name: mistywoods-babyfoot-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-umberto-bocc.jpg
-- name: sand-hand-sand-hand-feed-people.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-feed-people.jpg
-- name: window-window-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-creativity.jpg
-- name: berlinwall-DSC-0084-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-blue-electricity.jpg
-- name: adam-smith-adam-smith-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-really-hot.jpg
-- name: old-granary-field-granaryfield-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-space-pizza.jpg
-- name: nazi-invasion-shipping-docs-cranes.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-shipping-docs-cranes.jpg
-- name: old-cabin-oldcabin-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-deep-connections.jpg
-- name: nazi-invasion-IMG_8353.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_8353.jpg
-- name: stories-36575484422-087495fca9-z.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-36575484422-087495fca9-z.jpg
-- name: oldhouse-oldhouse-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-clean-view.jpg
-- name: fence-mexico-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-cinnamon-rolls.jpg
-- name: bordercrossing-bordercrossing-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-rainbow-festival.jpg
-- name: status-berlin-status-berlin-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-matrix.jpg
-- name: rockingchair-face-2-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-face-2-colored-circuits.jpg
-- name: old-granary-field-oldhouse-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-colorful-blocks.jpg
-- name: death-valley-death-valley-national-park-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-alberto-giacometti.jpg
+- name: blossombar-sunday-file-00-00-24-99.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-sunday-file-00-00-24-99.jpg
+- name: old-gas-pumps-oldgaspumps-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-smoking-cigarette.jpg
+- name: fence-fence-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-wols.jpg
+- name: copper-circuit-graffitti-red-hat-man.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-graffitti-red-hat-man.jpg
+- name: gypsymosaic-gypsy-eyes-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-umberto-bocc.jpg
+- name: stalin-time-fat-old-pigeon-on-fence.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-fat-old-pigeon-on-fence.jpg
+- name: white-house-whitehouse-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-cinnamon-rolls.jpg
+- name: aws-s3-lighthouse-lighthouse-still.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-lighthouse-lighthouse-still.jpg
+- name: oldroad-old-road-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-rainbow-festival.jpg
+- name: copper-circuit-british-sgtreet-phone-booth.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-british-sgtreet-phone-booth.jpg
+- name: hollywood-building-hollywood-building-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-copper-circuit.jpg
+- name: nazi-invasion-desert-road-mountains.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-desert-road-mountains.jpg
+- name: christianity-christianity-under-construction-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-far-away.jpg
+- name: beach-rocks-beach-rocks-currents-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-oily-mcoilface.jpg
+- name: copper-circuit-capital_36728420065_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-capital_36728420065_o.jpg
+- name: stalin-time-castle-window_35928999923_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-castle-window_35928999923_o.jpg
+- name: old-church-oldchurch-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-mucha-mult.jpg
+- name: hollywood-building-hollywood-building-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-diego-rivera1.jpg
+- name: rain-princess-downtown-building.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-downtown-building.jpg
+- name: aws-s3-square-23-160-800-500-0-max-0--5--1-square.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-23-160-800-500-0-max-0--5--1-square.jpg
+- name: liberty-back-statue-liberty-back-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-post-modern.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-rainbow-festival.jpg
+- name: la-muse-castle-clouds-green-lawn.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-castle-clouds-green-lawn.jpg
+- name: udnie-IMG_6984.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_6984.jpg
+- name: scream-IMG_6945.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-IMG_6945.jpg
+- name: server-cloud-server-racks-clouds-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-blue-granite.jpg
+- name: amusement-park-amusement-park-2-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-dry-skin.jpg
+- name: san-francisco-street-view-san-francisco-street-view-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-oily-mcoilface.jpg
+- name: stalin-time-thinking-man-statue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-thinking-man-statue.jpg
+- name: liberty-back-statue-liberty-back-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-smoking-cigarette.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-purple-storm.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-purple-storm.JPG
+- name: oldbarn-oldbarn-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-creativity.jpg
+- name: la-muse-castle-on-the-hill-windows.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-castle-on-the-hill-windows.jpg
+- name: stories-13439120-10154285627219813-3054276594176638940-n-copper-circuit-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-13439120-10154285627219813-3054276594176638940-n-copper-circuit-2.jpg
+- name: amusement-park-amusement-park-2-china-prop.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-china-prop.jpg
+- name: server-cloud-server-racks-clouds-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-emily-carr.jpg
 - name: fence-fence-constitution.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-constitution.jpg
-- name: stories-cargo-ship-on-sea-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-cargo-ship-on-sea-atari-missle.jpg
-- name: san-francisco-street-view-san-francisco-street-view-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-purple-pond.jpg
-- name: rockingchair-rockingchair.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair.jpg
-- name: gypsy-wagon-gypsywagon-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-clean-view.jpg
-- name: white-house-whitehouse-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-dark-soul.jpg
-- name: hollywood-building-hollywood-building-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-internet-numbers.jpg
-- name: old-house-oldhouse-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-light-dali.jpg
-- name: berlinwall-DSC-0084-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-pablo-blue.jpg
-- name: server-cloud-server-racks-door-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-crabapple.jpg
-- name: old-granary-field-granaryfield-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-pablo-blue.jpg
-- name: stalin-time-down-the-line-harlem.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-down-the-line-harlem.jpg
-- name: berlinwall2-berlinwall-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-really-hot.jpg
-- name: gypsy-wagon-gypsywagon-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-blue-electricity.jpg
-- name: oldhotel-oldhotel-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-cinnamon-rolls.jpg
-- name: amusement-park-amusement-park-2-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-clean-view.jpg
-- name: old-cabin-oldcabin-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-constitution.jpg
-- name: border-crossing-bordercrossing-dry-skin.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-dry-skin.png
-- name: white-house-lawn-white-house-window-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-blue-electricity.jpg
-- name: braceros-domingo-ulloa-container-several-colors-grey.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-container-several-colors-grey.jpg
-- name: downtown-trucksilo-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-kand-two.jpg
-- name: christianity-christianity-under-construction-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-nazi-poster.jpg
-- name: ellis-island-ellis-island-room-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-green-zuma.jpg
-- name: white-house-lawn-white-house-lawn-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-purple-storm.jpg
-- name: beach-rocks-beach-rocks-currents-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-really-hot.jpg
-- name: blossombar-really-hot-file-00-00-50-62.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-really-hot-file-00-00-50-62.jpg
-- name: store-on-corner-store-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-mucha-mult.jpg
-- name: downtown-trucksilo-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-dark-soul.jpg
-- name: curtain-curtain-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-gan-vogh.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-dark-soul.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-dark-soul.JPG
+- name: miamibeach-miamibeach-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-alberto-giacometti.jpg
+- name: bf-skinner-looking-down-over-city.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-looking-down-over-city.jpg
+- name: window-window-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-colorful-dream.jpg
+- name: old-granary-field-oldhouse-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-smooth-ride.jpg
+- name: wind-mills-windmills-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-nazi-poster.jpg
+- name: la-muse-downtown-berlin-crowds.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-downtown-berlin-crowds.jpg
+- name: gears-4882162452-fa3126b38d-b-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-matrix.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-kandinsky-bv.jpg
+- name: window-window-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-purple-pond.jpg
+- name: paris-paris-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-alberto-giacometti.jpg
+- name: blossombar-crunch-paper-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-crunch-paper-file-00-00-00-00.jpg
+- name: adam-smith-adam-smith-blue-circuit-4.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-blue-circuit-4.jpg
+- name: braceros-domingo-ulloa-early-computer-bletchley.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-early-computer-bletchley.jpg
+- name: gypsy-wagon-gypsywagon-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-creativity.jpg
 ---
 Fallin Home Shown In Country Living Magazine.&nbsp;Firearms Instructor Took Out Gunman At Texas Church Service.&nbsp;Heterosexual Couples Form 1st Civil Partnerships In England.&nbsp;Sundance, Impeachment Trial Could Overlap, But Will Trump Haters March Again?.&nbsp;Why 'truth Decay' Is Getting Worse.&nbsp;Hospice Of Gladwin Area Welcomes New Board Member.&nbsp;Fun Holiday Events At Sugarbush Resort.&nbsp;Bill Barr Thinks America Is Going To Hell.&nbsp;
